<resources>
    <string name="app_name">Kinesthesia_First_Attempt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="go_to_demographic_page">填寫基本資料</string>
    <string name="Cover_page"></string>
    <string name="demographic_page">基本資料</string>
    <string name="introduction_page">測驗說明</string>
    <string name="menu_page">測驗選單</string>
    <string name="practice_page">測驗練習</string>
    <string name="formal_page">正式測驗</string>

    <string name="demographic_dialog">已輸入基本資料</string>
    <string name="your_name">"姓名: %s"</string>
    <string name="your_sex">"性別: %s"</string>
    <string name="your_birthdate">"出生日期: %s"</string>
    <string name="your_testDate">"測驗日期: %s"</string>
    <string name="your_handedness">"慣用手: %s"</string>
    <string name="your_grade">"年級: %s"</string>
    <string name="your_city">"城市: %s"</string>
    <string name="your_code">"編碼: %s"</string>

    <string name="confirm_input">確認</string>
    <string name="modify_input">重新輸入</string>


    <string name="demo">基本資料</string>
    <string name="demo_name">姓名</string>
    <string name="demo_gender">性別</string>
    <string name="demo_grade">年級</string>
    <string name="demo_handiness">慣用手</string>
    <string name="demo_city">城市</string>
    <string name="demo_birth">生日</string>
    <string name="demo_code">編碼</string>
    <string name="demo_male">男</string>
    <string name="demo_female">女</string>

    <string name="demo_1">1</string>
    <string name="demo_2">2</string>
    <string name="demo_3">3</string>
    <string name="demo_4">4</string>
    <string name="demo_5">5</string>
    <string name="demo_6">6</string>


    <string name="demo_left">左</string>
    <string name="demo_right">右</string>

    <string name="demo_enterbirth"></string>
    <string name="demo_entername"></string>
    <string name="demo_entercode"></string>

    <string name="next_page">下一頁</string>
    <string name="grade_1">測驗一</string>
    <string name="grade_2">測驗二</string>
    <string name="grade_3">測驗三</string>
    <string name="grade_4">測驗四</string>
    <string name="grade_5">測驗五</string>
    <string name="grade_6">測驗六</string>
    <string name="korea">測驗七</string>
    <string name="finish_btn">跳出程式</string>
    <string name="me">我</string>
    <string name="start">開始</string>


    <string-array name="city_list">
        <item>請選擇城市</item>
        <item>高雄市</item>
        <item>台南市</item>
        <item>台北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>台中市</item>
        <item>基隆市</item>
        <item>新竹市</item>
        <item>嘉義市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義縣</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>臺東縣</item>
        <item>澎湖縣</item>
        <item>其他</item>
    </string-array>


    <string name="practice_dialog_title">測驗練習</string>
    <string name="practice_dialog_message">已完成基本練習次數</string>
    <string name="practice_dialog_try_again">再試一次</string>

    <string name="addition_dialog_title">補充測驗</string>
    <string name="addition_dialog_message">已完成本次補測內容</string>
    <string name="dialog_try_again">再試一次</string>
    <string name="addition_dialog_next_condition">更換補測選項</string>
    <string name="dialog_back_to_menu">前往選單</string>

    <string name="nondominant_dialog_title">非慣用手測驗</string>
    <string name="nondominant_dialog_message">已完成本次非慣用手測驗內容</string>
    <string name="nondominant_dialog_next_condition">更換測驗選項</string>


    <string name="autoTest_dialog_title">自動化測驗</string>

    <string name="test_dialog_title">正式測驗</string>
    <string name="test_dialog_message">已完成本方向測驗次數</string>
    <string name="test_dialog_message_finished_all_direction">已完成所有測驗方向</string>
    <string name="test_dialog_message_finished_all_context">已完成所有測驗情境</string>
    <string name="test_dialog_message_finished_all_stimuliType">已完成所有刺激種類</string>
    <string name="test_dialog_next_context">更換情境</string>
    <string name="test_dialog_next_condition">更換方向</string>
    <string name="test_dialog_next_stimuli">更換刺激</string>

    <string name="current_position">Current Position: X= f% Y= f%</string>
    <string name="start_position">Start Position: X=d% Y=d%</string>
    <string name="test_position">Test Position:  X=d% Y=d%</string>
    <string name="rest_position">Rest Position: X=d% Y=d%</string>
    <string name="response_position">Response Position: X=d% Y=d%</string>

    <string name="select_direction">確認選擇</string>
    <string name="record_position">紀錄位置</string>
    <string name="next_trial">Save Trial</string>
    <string name="instruction_title">步驟說明</string>
    <string name="practice_count">練習次數:</string>

    <string name="trial_count">測驗次數:</string>
    <string name="client_direction">受測者座位方向</string>
    <string name="examiner_direction">施測者座位方向</string>
    <string name="hint_plz_set_direction">請選方向</string>
    <string name="hint_plz_set_trials">請選次數</string>
    <string name="hint_plz_set_context">請選情境</string>
    <string name="hint_plz_set_stimuliType">請選刺激</string>


    <string name="auto_calibration_task">校正測驗</string>
    <string name="practice_task">測驗練習</string>
    <string name="dominant_formal_task">慣用手　　正式測驗</string>
    <string name="dominant_additional_task">慣用手　　補充測驗</string>
    <string name="non_dominant_formal_task">非慣用手　正式測驗</string>
    <string name="auto_all_task">自動測驗　ALL</string>
    <string name="auto_VAP2AP_task">自動測驗　VAP2AP</string>
    <string name="auto_AP2AP_task">自動測驗　AP2AP</string>
    <string name="auto_PP2AP_task">自動測驗　PP2AP</string>





    <string-array name="stimuliType_list">
        <item>請選刺激</item>
        <item>VAP2AP</item>
        <item> AP2AP</item>
        <item> PP2AP</item>
    </string-array>


    <string-array name="direction_list">
        <item>請選方向</item>
        <item>右下至右上</item>
        <item>右下至左上</item>
        <item>左下至左上</item>
        <item>左下至右上</item>
    </string-array>
    <!--
    <item>舊-左下至左上</item>
    <item>舊-左下至右上</item>
    <item>舊-右下至右上</item>
    <item>舊-右下至左上</item>
       <item>新-左上至左下</item>
        <item>新-左上至右下</item>
        <item>新-右上至右下</item>
        <item>新-右上至左下</item>
        -->

    <string-array name="trial_count_list">
        <item>請選次數</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="practice_trial_count_list">
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>


    <string-array name="context_list">
        <item>請選情境</item>
        <item>手指</item>
        <item>握筆</item>
    </string-array>

</resources>