<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="demographicFragment"
            type="com.example.kinesthesia_first_attempt.DemographicFragment" />
    </data>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/demographic_Page_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/demo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cupcake" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/go_to_demographic_page"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/demographic_Page_picture" />


            <TextView
                android:id="@+id/enter_subjectName"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="120dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/demo_name"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/demographic_Page_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/subjName"
                android:layout_width="697dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/demo_entername"
                app:layout_constraintBottom_toTopOf="@+id/GenderGroup"
                app:layout_constraintStart_toEndOf="@id/enter_subjectName"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/enter_birthday"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/demo_birth"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/demographic_Page_picture"
                app:layout_constraintTop_toBottomOf="@id/enter_gender" />

            <EditText
                android:id="@+id/birthDate"
                android:layout_width="683dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="date"
                android:text="@string/demo_enterbirth"
                app:layout_constraintStart_toEndOf="@+id/enter_birthday"
                app:layout_constraintTop_toBottomOf="@+id/GenderGroup" />


            <TextView
                android:id="@+id/enter_gender"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/demo_gender"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/demographic_Page_picture"
                app:layout_constraintTop_toBottomOf="@+id/enter_subjectName" />


            <TextView
                android:id="@+id/enter_grade"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/demo_grade"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/demographic_Page_picture"
                app:layout_constraintTop_toBottomOf="@+id/enter_handiness" />

            <TextView
                android:id="@+id/enter_handiness"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/demo_handiness"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/demographic_Page_picture"
                app:layout_constraintTop_toBottomOf="@+id/enter_birthday" />

            <TextView
                android:id="@+id/enter_city"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/demo_city"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/demographic_Page_picture"
                app:layout_constraintTop_toBottomOf="@+id/enter_grade" />

            <TextView
                android:id="@+id/enter_code"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/demo_code"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/demographic_Page_picture"
                app:layout_constraintTop_toBottomOf="@+id/enter_city" />

            <RadioGroup
                android:id="@+id/GenderGroup"
                android:layout_width="694dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/enter_gender"
                app:layout_constraintTop_toBottomOf="@+id/subjName">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_male"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_female"
                    android:textSize="24sp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/HandGroup"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/enter_handiness"
                app:layout_constraintTop_toBottomOf="@id/birthDate">

                <RadioButton
                    android:id="@+id/leftHand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_left"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rightHand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_right"
                    android:textSize="24sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/subjCode"
                android:layout_width="300dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/demo_entercode"
                app:layout_constraintStart_toEndOf="@id/enter_code"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <RadioGroup
                android:id="@+id/GradeGroup"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/enter_grade"
                app:layout_constraintTop_toBottomOf="@id/HandGroup">

                <RadioButton
                    android:id="@+id/Grade1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demo_1"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/Grade2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demo_2"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/Grade3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demo_3"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/Grade4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demo_4"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/Grade5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demo_5"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/Grade6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demo_6"
                    android:textSize="24sp" />

            </RadioGroup>

            <Spinner
                android:id="@+id/city"
                android:layout_width="300dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:addStatesFromChildren="false"
                app:layout_constraintStart_toEndOf="@id/enter_city"
                app:layout_constraintTop_toBottomOf="@id/GradeGroup" />


            <Button
                android:id="@+id/Demo_next"
                android:layout_width="165dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> demographicFragment.goToIntroduction()}"
                android:text="@string/next_page"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>