<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/testMenuFragment">


    <fragment
        android:id="@+id/introFragment"
        android:name="com.example.kinesthesia_first_attempt.IntroFragment"
        android:label="@string/introduction_page"
        tools:layout="@layout/fragment_intro" >
        <action
            android:id="@+id/action_introFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>


    <fragment
        android:id="@+id/demographicFragment"
        android:name="com.example.kinesthesia_first_attempt.DemographicFragment"
        android:label="@string/demographic_page">
        <action
            android:id="@+id/action_demographicFragment_to_introFragment"
            app:destination="@id/introFragment" />
    </fragment>


    <fragment
        android:id="@+id/testMenuFragment"
        android:name="com.example.kinesthesia_first_attempt.TestMenuFragment"
        android:label="@string/menu_page"
        tools:layout="@layout/fragment_test_menu" >
        <action
            android:id="@+id/action_testMenuFragment_to_practiceFragment"
            app:destination="@id/practiceFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_testFragment"
            app:destination="@id/testFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_additionFragment"
            app:destination="@id/additionFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_autorecordFragment"
            app:destination="@id/autorecordFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_nondominantFragment"
            app:destination="@id/nondominantFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_autoCalibrationFragment"
            app:destination="@id/autoCalibrationFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_autoVap2apFragment"
            app:destination="@id/autoVap2apFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_autoAp2apFragment"
            app:destination="@id/autoAp2apFragment" />
        <action
            android:id="@+id/action_testMenuFragment_to_autoPp2apFragment"
            app:destination="@id/autoPp2apFragment" />
    </fragment>


    <fragment
        android:id="@+id/practiceFragment"
        android:name="com.example.kinesthesia_first_attempt.PracticeFragment"
        android:label="@string/practice_page"
        tools:layout="@layout/fragment_practice" >
        <action
            android:id="@+id/action_practiceFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/coverFragment"
        android:name="com.example.kinesthesia_first_attempt.CoverFragment"
        android:label="@string/Cover_page">
        <action
            android:id="@+id/action_coverFragment_to_demographicFragment"
            app:destination="@id/demographicFragment" />
    </fragment>
    <fragment
        android:id="@+id/testFragment"
        android:name="com.example.kinesthesia_first_attempt.TestFragment"
        android:label="TestFragment" >
        <action
            android:id="@+id/action_testFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/additionFragment"
        android:name="com.example.kinesthesia_first_attempt.AdditionFragment"
        android:label="fragment_addition"
        tools:layout="@layout/fragment_addition" >
        <action
            android:id="@+id/action_additionFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/autorecordFragment"
        android:name="com.example.kinesthesia_first_attempt.AutorecordFragment"
        android:label="AutorecordFragment" >
        <action
            android:id="@+id/action_autorecordFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/nondominantFragment"
        android:name="com.example.kinesthesia_first_attempt.NondominantFragment"
        android:label="NondominantFragment" >
        <action
            android:id="@+id/action_nondominantFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/autoCalibrationFragment"
        android:name="com.example.kinesthesia_first_attempt.AutoCalibrationFragment"
        android:label="fragment_auto_calibration"
        tools:layout="@layout/fragment_auto_calibration" >
        <action
            android:id="@+id/action_autoCalibrationFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
        <action
            android:id="@+id/action_autoCalibrationFragment_to_testMenuFragment2"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/autoAp2apFragment"
        android:name="com.example.kinesthesia_first_attempt.AutoAp2apFragment"
        android:label="fragment_auto_ap2ap"
        tools:layout="@layout/fragment_auto_ap2ap" >
        <action
            android:id="@+id/action_autoAp2apFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/autoPp2apFragment"
        android:name="com.example.kinesthesia_first_attempt.AutoPp2apFragment"
        android:label="fragment_auto_pp2ap"
        tools:layout="@layout/fragment_auto_pp2ap" >
        <action
            android:id="@+id/action_autoPp2apFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/autoVap2apFragment"
        android:name="com.example.kinesthesia_first_attempt.AutoVap2apFragment"
        android:label="fragment_auto_vap2ap"
        tools:layout="@layout/fragment_auto_vap2ap" >
        <action
            android:id="@+id/action_autoVap2apFragment_to_testMenuFragment"
            app:destination="@id/testMenuFragment" />
    </fragment>


</navigation>